Got it to work with newer IntelliJ versions using fix from Roland Spatzenegger (@CymricNPG ), still throws exception.