@@ -1,20 +1,7 @@
 package de.kontext_e.idea.plugins.autofill;
 
-import static com.intellij.openapi.command.UndoConfirmationPolicy.DEFAULT;
-
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-import javax.swing.*;
-
-import org.jetbrains.annotations.Nls;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
-
 import com.intellij.codeInsight.hint.ShowParameterInfoContext;
+import com.intellij.codeInsight.hint.api.impls.MethodParameterInfoHandler;
 import com.intellij.codeInsight.intention.IntentionAction;
 import com.intellij.codeInsight.intention.PsiElementBaseIntentionAction;
 import com.intellij.lang.Language;
@@ -27,19 +14,20 @@ import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.PopupChooserBuilder;
 import com.intellij.openapi.util.TextRange;
-import com.intellij.psi.PsiCallExpression;
-import com.intellij.psi.PsiClass;
-import com.intellij.psi.PsiDocumentManager;
-import com.intellij.psi.PsiElement;
-import com.intellij.psi.PsiFile;
-import com.intellij.psi.PsiMethod;
-import com.intellij.psi.PsiParameter;
-import com.intellij.psi.PsiParameterList;
-import com.intellij.psi.infos.CandidateInfo;
+import com.intellij.psi.*;
 import com.intellij.psi.util.PsiUtilBase;
 import com.intellij.psi.util.PsiUtilCore;
 import com.intellij.ui.components.JBList;
 import com.intellij.util.IncorrectOperationException;
+import org.jetbrains.annotations.Nls;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+
+import javax.swing.*;
+import java.util.*;
+import java.util.stream.Collectors;
+
+import static com.intellij.openapi.command.UndoConfirmationPolicy.DEFAULT;
 
 public class AutoFillCallArguments extends PsiElementBaseIntentionAction implements IntentionAction {
     @Override
@@ -66,10 +54,7 @@ public class AutoFillCallArguments extends PsiElementBaseIntentionAction impleme
 
     private void insertParameters(final Project project, final Editor editor, final Collection<PsiMethod> psiMethods) {
         // Create a popup dialog that displays the list of options
-        final var methodsWrapped = psiMethods.stream()
-                                             .map(PsiMethodWrapper::new)
-                                             .collect(Collectors.toList());
-
+        final var methodsWrapped = psiMethods.stream().map(PsiMethodWrapper::new).toList();
 
         final var model = new DefaultListModel<PsiMethodWrapper>();
         final var list = new JBList<>(model);
@@ -77,18 +62,13 @@ public class AutoFillCallArguments extends PsiElementBaseIntentionAction impleme
 
         final var builder = new PopupChooserBuilder<>(list);
 
-        builder.setItemChosenCallback(selectedOption ->
-                                          ApplicationManager.getApplication().invokeLater(() ->
-                                                                                              ApplicationManager.getApplication().runWriteAction(() -> {
-                                                                                                  final var doc = editor.getDocument();
-                                                                                                  CommandProcessor.getInstance().executeCommand(
-                                                                                                      project,
-                                                                                                      () -> insertParameters(editor, selectedOption.method),
-                                                                                                      "Add Auto Parameters",
-                                                                                                      null,
-                                                                                                      DEFAULT,
-                                                                                                      doc);
-                                                                                              })));
+        builder.setItemChosenCallback(
+                selectedOption -> ApplicationManager.getApplication().invokeLater(
+                        () -> ApplicationManager.getApplication().runWriteAction(
+                                () -> {
+                                    final var doc = editor.getDocument();
+                                    CommandProcessor.getInstance().executeCommand(project, () -> insertParameters(editor, selectedOption.method), "Add Auto Parameters", null, DEFAULT, doc);
+                                })));
 
         builder.createPopup().showInBestPositionFor(editor);
     }
@@ -108,8 +88,8 @@ public class AutoFillCallArguments extends PsiElementBaseIntentionAction impleme
             offset--;
         }
         final var insertString = Arrays.stream(params)
-                                       .map(PsiParameter::getName)
-                                       .collect(Collectors.joining(", "));
+                .map(PsiParameter::getName)
+                .collect(Collectors.joining(", "));
         doc.insertString(offset, insertString);
         editor.getCaretModel().moveToOffset(offset + insertString.length() + 1);
     }
@@ -159,13 +139,13 @@ public class AutoFillCallArguments extends PsiElementBaseIntentionAction impleme
 
         return DumbService.getInstance(project).computeWithAlternativeResolveEnabled(
             () -> getParameterInfoHandlers(project, file, language).stream()
-                                                                    .map(handler -> handler.findElementForParameterInfo(context))
-                                                                    .filter(Objects::nonNull)
-                                                                    .flatMap(element -> Arrays.stream(context.getItemsToShow()))
-                                                                    .map(MethodParameterInfoHandler::tryGetMethodFromCandidate)
-                                                                    .filter(Objects::nonNull)
-                                                                    .filter(PsiMethod::hasParameters)
-                                                                    .collect(Collectors.toList()));
+                    .map(handler -> handler.findElementForParameterInfo(context))
+                    .filter(Objects::nonNull)
+                    .flatMap(element -> Arrays.stream(context.getItemsToShow()))
+                    .map(MethodParameterInfoHandler::tryGetMethodFromCandidate)
+                    .filter(Objects::nonNull)
+                    .filter(PsiMethod::hasParameters)
+                    .collect(Collectors.toList()));
     }
 
     @NotNull
